force-app/main/default/objects/KimbleOne__UpgradeScript__c/KimbleOne__UpgradeScript__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Upgrade Script</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Upgrade Scripts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>