force-app/main/default/objects/KimbleOne__UpgradeScript__c/fields/KimbleOne__AsyncJobId__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AsyncJobId__c</fullName>
    <label>AsyncJobId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>