force-app/main/default/objects/KimbleOne__UpgradeScript__c/fields/KimbleOne__ClassName__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ClassName__c</fullName>
    <label>ClassName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>