force-app/main/default/objects/KimbleOne__UpgradeScript__c/fields/KimbleOne__DisableTriggers__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DisableTriggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Triggers</label>
    <type>Checkbox</type>
</CustomField>