force-app/main/default/objects/KimbleOne__UpgradeScript__c/fields/KimbleOne__Message__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Message__c</fullName>
    <label>Message</label>
    <type>TextArea</type>
</CustomField>