force-app/main/default/objects/KimbleOne__UpgradeScript__c/fields/KimbleOne__MethodName__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__MethodName__c</fullName>
    <label>Z_Obsolete - Method Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>