force-app/main/default/objects/KimbleOne__UpgradeScript__c/fields/KimbleOne__RowLimit__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RowLimit__c</fullName>
    <label>Row Limit</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>