force-app/main/default/objects/KimbleOne__UpgradeScript__c/fields/KimbleOne__StopOnError__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__StopOnError__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Stop On Error</label>
    <type>Checkbox</type>
</CustomField>