force-app/main/default/objects/KimbleOne__UpgradeScript__c/fields/KimbleOne__VersionNumber__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__VersionNumber__c</fullName>
    <label>VersionNumber</label>
    <length>20</length>
    <type>Text</type>
</CustomField>