force-app/main/default/objects/KimbleOne__UpgradeScript__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__Sequence__c</columns>
    <columns>KimbleOne__ClassName__c</columns>
    <columns>KimbleOne__DisableTriggers__c</columns>
    <columns>KimbleOne__AsyncJobId__c</columns>
    <columns>KimbleOne__RowLimit__c</columns>
    <columns>KimbleOne__Status__c</columns>
    <columns>KimbleOne__Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>